--- a/AUTHORS
+++ b/AUTHORS
@@ -6,3 +6,6 @@
 #   # commits  Name or Organization <email address>
 # The email address is not required for organizations.
 Jason Dobry <jason.dobry@gmail.com>
+Jason Dobry <jason.dobry@gmail.com>
+Overall, Matthew <overallm@medamerica.com>
+Tianxiang Chen <txchendev@gmail.com>
